--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
-MONGODB_URL = mongodb+srv://BenJenkyn:ziZNH7SeQdDrJpIm@cluster0.oobcc.mongodb.net/airbnb?retryWrites=true&w=majority
+//Post your mongodb URI Here
+MONGODB_URL = 
