added better naming to queries

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=4000
-//Post your mongodb URI Here
-MONGODB_URL = 
+MONGODB_URL = mongodb+srv://BenJenkyn:ziZNH7SeQdDrJpIm@cluster0.oobcc.mongodb.net/airbnb?retryWrites=true&w=majority
